cmake_minimum_required(VERSION 3.21)
project(ZBQ_clionworkspace)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZBQ_clionworkspace set01.cpp string2.cpp string3.cpp 2000.cpp 2001.cpp 2002.cpp 2003.cpp 2004.cpp 2005.cpp 2006.cpp 2007.cpp 2008.cpp 2009.cpp 2010.cpp 2011.cpp 2012.cpp 2013.cpp 2014.cpp 2015.cpp 2016.cpp 2017.cpp 2018.cpp 2019.cpp 2020.cpp 2021.cpp 2022.cpp 2023.cpp 2024.cpp 2025.cpp 2026.cpp 2027.cpp 2028.cpp 2029.cpp 2030.cpp 2031.cpp 2032.cpp 2033.cpp 2034.cpp 2035.cpp 2036.cpp pat_b1020.cpp 2037.cpp 2039.cpp newSource.cpp test.cpp)
